--- a/app/styles/products.scss
+++ b/app/styles/products.scss
@@ -1,6 +1,6 @@
 
 
-.div1:hover, .div2:hover, .div3:hover {
+.div1:hover, .div2:hover, .div3:hover,.div4:hover {
   transform: scale(1.05);
   box-shadow: 0 0 20px rgba(28, 133, 68, 0.5);
 }
@@ -11,4 +11,9 @@
 }
 .div1>h2, .div2>h2,.div3>h2  {
     padding-bottom: 5px;
+}
+p {
+    margin: 5px;
+    color: oklch(44.8% 0.119 151.328);
+    font-weight: 600;
 }
