--- a/app/styles/products.scss
+++ b/app/styles/products.scss
@@ -12,7 +12,7 @@
 .div1>h2, .div2>h2,.div3>h2  {
     padding-bottom: 5px;
 }
-p {
+.pricepoints {
     margin: 5px;
     color: oklch(44.8% 0.119 151.328);
     font-weight: 600;
