--- a/app/styles/portfolio.scss
+++ b/app/styles/portfolio.scss
@@ -5,6 +5,7 @@
     width: 650px;
     height: 450px;
     gap: 15px;
+    margin: 25px auto;
 }
 .imgcontainer>img {
   transition: transform .5s ease;
@@ -25,7 +26,7 @@ $total_animation_time: $time_per_slide * $slides;
 .container{
   margin:50px auto;
   width:500px;
-  height:700px;
+  height:750px;
   overflow:hidden;
   border:10px solid;
   border-top-color:#0a6b17;
@@ -35,11 +36,18 @@ $total_animation_time: $time_per_slide * $slides;
   position:relative;
 
 }
+.container>img {
+      transition: transform .5s ease;
+}
 .photo{
   position:absolute;
   animation:round #{$total_animation_time}s infinite;
   opacity:0;
   
+  
+}
+.container:hover {
+    transform: scale(1.3);
 }
 @keyframes round{   
   25%{
