--- a/app/styles/portfolio.scss
+++ b/app/styles/portfolio.scss
@@ -1,16 +1,40 @@
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0 4px;
+}
 
-.imgcontainer {
-    display: flex;
-    justify-content: center;
-    width: 650px;
-    height: 450px;
-    gap: 15px;
-    margin: 25px auto;
+/* Create four equal columns that sits next to each other */
+.column {
+  flex: 5%;
+  max-width: 25%;
+  padding: 0 4px;
+    max-width: 400px;
 }
-.imgcontainer>img {
-  transition: transform .5s ease;
-}
-.imgcontainer>img:hover {
-        transform: scale(1.5);
+.column img:hover {
+  transform: scale(1.5);
         cursor: pointer;
+}
+.column img {
+  margin-top: px;
+  vertical-align: middle;
+  width: 100%;
+    transition: transform .5s ease;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
 }
