--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -42,7 +42,7 @@
 }
 
 .review {
-  background: var(--clr-white);
+  background: inherit;
   padding: 1.5rem 2rem;
   border-radius: var(--radius);
   box-shadow: var(--light-shadow);
