--- a/app/styles/portfolio.scss
+++ b/app/styles/portfolio.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  flex-direction: row;
   padding: 0 4px;
 }
 
@@ -10,7 +11,7 @@
   flex: 5%;
   max-width: 25%;
   padding: 0 4px;
-    max-width: 400px;
+    max-width: 300px;
 }
 .column img:hover {
   transform: scale(1.5);
